# bakare

./: .build.yml  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/: FUNDING.yml
.github/workflows/: test.yml
benches/: bench.rs
scripts/: rust-unmangle  test.sh
src/: backup.rs  error.rs  index.rs  lib.rs  main.rs  repository.rs  repository_item.rs  restore.rs  source.rs  storage.rs  version.rs
src/index/: io.rs  item.rs  lock.rs  mod.rs
src/io/: error_correcting_encoder.rs  mod.rs
src/repository/: item.rs  mod.rs
src/test/: assertions.rs  mod.rs  source.rs
tests/: concurrency_tests.rs  deduplication_tests.rs  system_tests.rs
