[package]
name = "bakare"
version = "0.1.0"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
failure = "0.1"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
tempfile = "3.1"
walkdir = "2.3"
sha2 = "0.9"
hex = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

