[package]
name = "bakare"
version = "0.1.0"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
atomicwrites = "0.2"
base64 = "0.13"
fail = "0.4"
femme = "2.1"
fs2 = "0.4"
glob = "0.3"
hex = "0.4"
log = "0.4"
nix = "0.19"
rand = "0.8"
rayon = "1.5"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.9"
tempfile = "3.1"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
vfs = "0.4"
walkdir = "2.3"

[dev-dependencies]
proptest = "0.10"
two-rusty-forks = "0.4.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "prepush-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[profile.release]
debug = 1

[features]
failpoints = [ "fail/failpoints" ]