[package]
name = "bakare"
version = "0.1.0"
authors = ["Cyryl Płotnicki <cyplo@cyplo.dev>"]
edition = "2021"
rust-version = "1.56"
license = "AGPL-3.0"
description = "modern and simple, yet efficient backup solution"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
blake = "2"
chacha20poly1305 = "0.9"
fail = "0.5"
femme = "2"
hex = "0.4"
log = "0.4"
nix = "0.24"
rand = "0.8"
reed-solomon = "0.2"
seahorse = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1"
proptest = "1"
two-rusty-forks = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "prepush-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = 1

[features]
failpoints = [ "fail/failpoints" ]
